Fix empty state to work with dark mode

--- a/app/javascript/stylesheets/application.sass
+++ b/app/javascript/stylesheets/application.sass
@@ -97,7 +97,9 @@ $family-sans-serif: 'Inter var alt', -apple-system, Helvetica, sans-serif
   &-title
 
 .empty-box
-  padding: $size-3
-  border: 1px $border dashed
-  border-radius: $radius
-  background-color: $white-bis
+  padding: $size-1 0
+  border-top: 1px solid
+  border-bottom: 1px solid
+  border-color: $grey-lighter
+  @media (prefers-color-scheme: dark)
+    border-color: $grey-darker
